--- a/bsto/src/main/resources/templates/addbook.html
+++ b/bsto/src/main/resources/templates/addbook.html
@@ -10,17 +10,25 @@
 	<h2>Add book</h2>
 
 	<div>
-		<form th:object="${sbook}" th:action="@{save}" action="#"
-			method="post">
+		<form th:object="${sbook}" th:action="@{save}" action="#" method="post">
 			<label for="title">Title</label> 
 			<input type="text" id="title"
 				th:field="*{title}" /> 
-				<label for="author">Author</label> <input
-				type="text" id="author" th:field="*{author}" /> 
+				<label for="author">Author</label> 
+				<input type="text" id="author" th:field="*{author}" /> 
 				<label for="isbn">ISBN</label>
 			<input type="text" id="isbn" th:field="*{isbn}" /> 
 			<label for="year">Year</label>
 			<input type="text" id="year" th:field="*{year}" /> 
+			
+			<div>
+			<label for="catlist">Category</label>
+			 <select id="catlist" th:field="*{category}" class="form-control">
+       			<option th:each="category: ${categories}" th:value="${category.categoryid}" th:text="${category.name}"></option>
+    		</select>
+    		</div>
+			
+			
 			<input type="submit" value="Save"></input>
 		</form>
 	</div>
