--- a/bsto/src/main/resources/templates/booklist.html
+++ b/bsto/src/main/resources/templates/booklist.html
@@ -17,6 +17,7 @@
     	<th>Author</th>
     	<th>ISBN</th>
     	<th>year</th>
+    	<th>Category</th>
     	</tr>
     	</thead>
     
@@ -26,6 +27,7 @@
     	<td th:text="${sbook.author}"></td>
     	<td th:text="${sbook.isbn}"></td>
     	<td th:text="${sbook.year}"></td>
+    	<td th:text="${sbook.category.name}"></td>
     	<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${sbook.id})}">Delete</a></td>
     	<td><a class="btn btn-success" th:href="@{/edit/{id}(id=${sbook.id})}">Edit</a></td>
   		</tr>
