--- a/bsto/src/main/resources/templates/editbook.html
+++ b/bsto/src/main/resources/templates/editbook.html
@@ -16,6 +16,11 @@
 				<input type="text" th:field="*{author}" /> 
 				<input type="text" th:field="*{isbn}" /> 
 				<input type="text" th:field="*{year}" /> 
+				
+				<label for="catlist">Category</label>
+			 <select id="catlist" th:field="*{category}" class="form-control">
+       			<option th:each="category: ${categories}" th:value="${category.categoryid}" th:text="${category.name}"></option>
+    		</select>
 				<input type="submit" class="btn btn-success" value="Save"></input>
 
 		</form>
